--- a/_config.yml
+++ b/_config.yml
@@ -1,14 +1,13 @@
 # Site settings
 title: Chris Mendis' Blog
-email: chris.mendis@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
   I'm a Web Developer at Format.com in Toronto, Canada. I'll
   post random thoughts and sundry ramblings here from time to
   exceedingly rare time.
 baseurl: "" # the subpath of your site, e.g. /blog/
 url: "http://chrismendis.js.org" # the base hostname & protocol for your site
-twitter_username: jekyllrb
-github_username:  jekyll
+twitter_username: chrismendis
+github_username:  chrismendis
 timezone: America/New_York
 
 # Build settings
